Fixing language filter width
The random api response was causing a bug because the language it received was too large "New zealand sign language"

--- a/src/components/filter/FilterSelect.css
+++ b/src/components/filter/FilterSelect.css
@@ -15,7 +15,7 @@ select {
   border-radius: 5px;
   outline: none;
   text-align: center;
-  max-width: 70%;
+  max-width: 130px;
 }
 
 @media (max-width: 826px) {
